# kmv-carrot-knowledge-bot

./: .env  .gitignore  LICENSE  README.md  admin_handlers.py  admin_panel.py  build.sh  category_management.py  config.py  config_loader.py  dispatcher.py  firebase_db.py  index.html  logging_config.py  main.py  middleware.py  mongo_db.py  morkovka-kmv-bot-31365aded116.json  product_management.py  pyproject.toml  render.yaml  requirements.txt  script.js  service_account.json  setup.py  sqlite_db.py  states.py  statistics.py  styles.css  system_tests.py  tailwind.config.ts  test_management.py  user_management.py
config/: __init__.py  base.py  development.py  production.py
database/: __init__.py  base.py  models.py  repositories.py
docs/: configuration.md
handlers/: __init__.py  admin.py  catalog.py  knowledge_base.py  testing.py  tests.py  user.py  user_management.py
migrations/: 001_initial_schema.json  migration_001.sql
monitoring/: __init__.py  metrics.py
products/: software.html
scripts/: backup_db.py  migrate_db.py  monitor_system.py
services/: __init__.py  base.py  test.py  user.py
src/: App.tsx
src/components/: BotPreview.tsx  CodeExample.tsx  FeatureSection.tsx  FirebaseInfo.tsx  Footer.tsx  Header.tsx  HeroSection.tsx
src/layouts/: MainLayout.tsx
src/pages/: AdminPage.tsx  Index.tsx  KnowledgePage.tsx  TestingPage.tsx
src/services/: firebase.ts
src/types/: index.ts
tests/: test_config.py  test_config_loader.py
utils/: __init__.py  db_pool.py  error_handling.py  file_storage.py  health_check.py  helpers.py  keyboards.py  message_utils.py  polling.py  resource_manager.py
