[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kmv-carrot-knowledge-bot"
version = "1.0.0"
description = "Telegram bot for managing product knowledge and testing"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "."}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "3.20.0"
aiohttp = "3.11.0"
python-dotenv = "1.0.0"
pillow = "10.0.1"
aiosqlite = "0.19.0"
pytz = "2024.1"
python-magic = "0.4.27"
requests = "2.31.0"
gunicorn = "21.2.0"
uvicorn = "0.27.1"
python-multipart = "0.0.9"
aiofiles = "23.2.1"
bcrypt = "4.1.2"
psutil = "5.9.8"

[tool.poetry.group.dev.dependencies]
pytest = "8.0.2"
pytest-asyncio = "0.23.5"
pytest-cov = "4.1.0"
black = "24.2.0"
isort = "5.13.2"
mypy = "1.8.0"
types-requests = "2.31.0.20240125"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "aiogram.*",
    "aiohttp.*",
    "pytest.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "--cov=bot --cov-report=term-missing" 